# feeder

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md  feeder.entitlements
src/: devicecontroller.h  devicecontroller.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple_swift_bridge.h  swift_command_bridge.h  swift_device_controller.h  swift_device_controller.mm  swift_wrapper.cpp  swift_wrapper.h  working_swift_bridge.mm
